# wmm

./: .gitignore  README.md  create_get_uncertainty_test_Val.py  description.md  load_lat_test.txt  pyproject.toml  pytest.ini  requirements.txt  todo_list0108.txt
.github/workflows/: ci.yml  pr_check.yml  pypi-publish.yml
smoke_tests/: load_testing.py  test_postdeployment.py
tests/: SystemTest.py  Test_wmm.py  create_get_uncertainty_test_Val.py  est_diff.py  load_testing.py  test_vec.py
wmm/: WMM2025_FINAL_TEST_VALUES.txt  WMM2025_FINAL_TEST_VALUES_DEC_UNC.txt  __init__.py  build.py  compute.py  load.py  old_build.py  readme.py  scratch.ipynb  sh_loader.py  test_vec.py  uncertainty.py  wmm.py
wmm/coefs/: WMM.cof  WMM2020.cof  WMMHR.cof
wmm/tests/: Test_geomaglib.py
