[project]
name = "wmm"
version = "0.1.0"
description = "WMM Python Module based on WMM2020"
authors = [{ name = "Li-Yin Young", email = "liyin.young@noaa.gov" }]
dependencies = [
    "numpy==2.1.1",
    "geomaglib @ git+https://github.com/CIRES-Geomagnetism/geomaglib.git@v0.3.1"  # Git dependency
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
