[project]
name = "wmm"
version = "0.1.0"
description = "WMM Python Module based on WMM2020"
authors = [{ name = "Li-Yin Young", email = "liyin.young@noaa.gov" }]
dependencies = [
    "numpy==2.1.1",
    "geomaglib @ git+https://github.com/CIRES-Geomagnetism/geomaglib.git@v0.3.2"  # Git dependency
]
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.ncei.noaa.gov/products/world-magnetic-model"
